libs/modkit-macros-tests/tests/ui/fail/module_name_uppercase.stderr
error: module name must start with a lowercase letter, found 'F'
 --> tests/ui/fail/module_name_uppercase.rs:6:12
  |
6 |     name = "FileParser",  // Should fail: contains uppercase letters
  |            ^^^^^^^^^^^^
